--- a/clubProject/app/build.gradle
+++ b/clubProject/app/build.gradle
@@ -20,11 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:20.0.0'
     compile 'com.google.android.gms:play-services:+'
     compile 'com.android.support:appcompat-v7:20.0.0'
-    compile files('libs/jtds-1.3.1.jar')
-    compile files('libs/javax.activation.jar')
     compile files('libs/geronimo-javamail_1.4_spec-1.6.jar')
+    compile files('libs/javax.activation.jar')
+    compile files('libs/jtds-1.3.0.jar')
 }
