--- a/clubProject/app/src/main/AndroidManifest.xml
+++ b/clubProject/app/src/main/AndroidManifest.xml
@@ -48,3 +48,63 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
 </manifest>
+
+
+
+    <!--
+    <?xml version="1.0" encoding="utf-8"?>
+    <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+        package="com.seniorproject.sauclubmanager" >
+
+        <application
+            android:allowBackup="true"
+            android:icon="@drawable/s_a_icon"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
+
+            <activity
+                android:name=".ClubManagerMainActivity"
+                android:label="@string/app_name"
+                 >
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+            </activity>
+
+      &lt;!&ndash;      <activity
+                android:name=".ClubManagerMainActivity"
+                android:label="@string/app_name" >
+            </activity>&ndash;&gt;
+
+        &lt;!&ndash;    <activity android:name="com.facebook.LoginActivity"
+                android:label="Facebook Login"></activity>&ndash;&gt;
+
+                <meta-data
+                android:name="com.facebook.sdk.ApplicationId"
+                android:value="@string/facebook_app_id" >
+                </meta-data>
+
+
+        </application>
+
+        &lt;!&ndash; To access Google+ APIs: &ndash;&gt;
+        <uses-permission android:name="android.permission.INTERNET" />
+
+        &lt;!&ndash;
+         To retrieve OAuth 2.0 tokens or invalidate tokens to disconnect a user. This disconnect
+         option is required to comply with the Google+ Sign-In developer policies
+        &ndash;&gt;
+        <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+
+        &lt;!&ndash; To retrieve the account name (email) as part of sign-in: &ndash;&gt;
+        <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+
+        &lt;!&ndash; To auto-complete the email text field in the login form with the user's emails &ndash;&gt;
+        <uses-permission android:name="android.permission.READ_PROFILE" />
+        <uses-permission android:name="android.permission.READ_CONTACTS" />
+
+
+    </manifest>
+    -->
