--- a/clubProject/app/src/main/AndroidManifest.xml
+++ b/clubProject/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             android:label="@string/app_name" >
         </activity>
 
+        <activity
+            android:name=".com.seniorproject.utilities.reg_login_frag"
+            android:label="@string/reg_text" >
+        </activity>
+
         <!--
             <meta-data
             android:name="com.google.android.gms.version"
