--- a/clubProject/app/build.gradle
+++ b/clubProject/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
         applicationId "com.seniorproject.sauclubmanager"
@@ -27,4 +27,5 @@ dependencies {
     compile files('libs/geronimo-javamail_1.4_spec-1.6.jar')
     compile files('libs/javax.activation.jar')
     compile files('libs/jtds-1.3.0.jar')
+    compile project(':ParseLoginUI')
 }
