--- a/clubProject/app/src/main/AndroidManifest.xml
+++ b/clubProject/app/src/main/AndroidManifest.xml
@@ -6,13 +6,13 @@
         android:allowBackup="true"
         android:icon="@drawable/s_a_icon"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Seniorproj" >
+        android:theme="@style/Theme.Seniorproj"
+        android:name=".myApplication">
 
         <activity
-
-            android:name=".LoginScreen"
-            android:label="@string/title_activity_login_screen"
-            >
+            android:name=".com.seniorproject.utilities.DispatchActivity"
+            android:label="SAU Clubs"
+            android:noHistory="true">
             <!--android:windowSoftInputMode="adjustResize|stateVisible"-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,8 +20,32 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="com.parse.ui.ParseLoginActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop">
+            <meta-data
+                android:name="com.parse.ui.ParseLoginActivity.PARSE_LOGIN_ENABLED"
+                android:value="true"/>
+            <!-- Added these options below to customize the login flow -->
+            <meta-data
+                android:name="com.parse.ui.ParseLoginActivity.APP_LOGO"
+                android:resource="@drawable/s_a_icon"/>
+            <meta-data
+                android:name="com.parse.ui.ParseLoginActivity.FACEBOOK_LOGIN_ENABLED"
+                android:value="false"/>
+            <meta-data
+                android:name="com.parse.ui.ParseLoginActivity.TWITTER_LOGIN_ENABLED"
+                android:value="false"/>
+            <meta-data
+                android:name="com.parse.ui.ParseLoginActivity.PARSE_LOGIN_EMAIL_AS_USERNAME"
+                android:value="true"/>
+        </activity>
+
         <activity android:name = ".HomeActivity"
                   android:label="My Dashboard"/>
+        <activity android:name = ".unAuthHomeActivity"
+            android:label="My Dashboard"/>
         <activity android:name=".DashboardActivity"/>
         <activity android:name = ".clubs"
                   android:label="Clubs"
